[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "akbs"
version = "1.0.3"
authors = [
  { name="Aarav Malani", email="aarav.malani@gmail.com" },
]
description = "A super quick build system for C, C++ and ASM"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
]

[project.urls]
"Homepage" = "https://github.com/AaravMalani/AKBS"
"Bug Tracker" = "https://github.com/AaravMalani/AKBS/issues"